--- a/layout/Reset.css
+++ b/layout/Reset.css
@@ -108,7 +108,8 @@ input, /* 1 */
 select, /* 1 */
 textarea  /* 1 */
 {
-    font-family: 'helvetica neue',tahoma,'hiragino sans gb',stheiti,'wenquanyi micro hei',\5FAE\8F6F\96C5\9ED1,\5B8B\4F53,sans-serif;
+    /*font-family: 'Source Han Sans cn','helvetica neue',tahoma,'hiragino sans gb',stheiti,'wenquanyi micro hei',\5FAE\8F6F\96C5\9ED1,\5B8B\4F53,sans-serif;*/
+    font-family: 'PingFang SC', 'Helvetica Neue','Source Han Sans cn', 'Helvetica', 'STHeitiSC-Light','wenquanyi micro hei', 'Arial', sans-serif;
     -ms-text-autospace: ideograph-alpha ideograph-numeric ideograph-parenthesis; /* 5 */
     text-autospace: ideograph-alpha ideograph-numeric ideograph-parenthesis; /* 5 */
 }
