--- a/layout/style.css
+++ b/layout/style.css
@@ -330,6 +330,11 @@ a{
     font-size: 28px;
     top: 92px;
     left: 86px;
+    transition: text-shadow .3s;
+}
+
+.event-HUT .key.t1:hover{
+    text-shadow: 0 2px 7px rgba(0,0,0,.4);
 }
 
 
@@ -376,11 +381,51 @@ a{
     opacity: .8;
 }
 
+/*盒子*/
 .event-HUT .key.t4{
     font-size: 22px;
+    width: 44px;
+    height: 39px;
     top: 66px;
     left: 40px;
 }
+
+.event-HUT .key.t4 span{
+    transform-origin: 0 50%;
+    position: absolute;
+}
+
+.event-HUT .key.t4:hover .box1{
+    animation: openBox 1s infinite;
+}
+
+.event-HUT .key.t4:hover .box2{
+    transform: rotate(0deg) scale(0.2);
+    opacity: 0;
+
+    animation: openBoxCopy 1s infinite;
+}
+
+.event-HUT .key.t4:active .box1{
+    animation: openBox .3s infinite;
+}
+
+.event-HUT .key.t4:active .box2{
+    animation: openBoxCopy .3s infinite;
+}
+
+@keyframes openBoxCopy {
+    0%{transform: scale(.2); opacity: 0;transform-origin: 50% 100%;}
+    100%{transform: scale(1);opacity: 1;transform-origin: 50% 100%;}
+}
+
+
+@keyframes openBox {
+    0%{transform: rotate(0deg);}
+    100%{transform: rotate(-67deg) scale(1.1);opacity: 0;}
+}
+
+
 
 .event-HUT .key.t4.show{
     opacity: .7;
