--- a/layout/expDetailCon.css
+++ b/layout/expDetailCon.css
@@ -17,28 +17,34 @@
     position: absolute;
     cursor: pointer;
     opacity: 0;
+    line-height: 1;
 }
 
 .keys .key.show{
     opacity: 1;
-    -webkit-transition: opacity .6s, -webkit-transform .4s ease-out;
-    transition: opacity .6s, transform .4s ease-out;
+    margin-bottom: 0;
+    line-height: 1.4;
+    -webkit-transition: line-height .4s,opacity .6s, -webkit-transform .4s ease-out;
+    transition: line-height .4s,opacity .6s, transform .4s ease-out;
 }
 
 /*好像好麻烦的方法？*/
 .event-HUT .key.show{
+    -webkit-animation: float 8s infinite linear;
     animation: float 8s infinite linear;
 }
 
-/*.event-HUT .key.show:hover{*/
-/*animation: none;*/
-/*transform: translate(0,-1px);*/
-/*}*/
+@-webkit-keyframes float {
+    0%,100%{-webkit-transform: translate(0,0px);}
+    33.3%{-webkit-transform: translate(0,5px);}
+    66.6%{-webkit-transform: translate(0,-5px);}
+}
+
 
 @keyframes float {
-    0%,100%{transform: translate(0,0px);}
-    33.3%{transform: translate(0,5px);}
-    66.6%{transform: translate(0,-5px);}
+    0%,100%{-webkit-transform: translate(0,0px);transform: translate(0,0px);}
+    33.3%{-webkit-transform: translate(0,5px);transform: translate(0,5px);}
+    66.6%{-webkit-transform: translate(0,-5px);transform: translate(0,-5px);}
 }
 
 .event-HUT .key.t1{
@@ -612,11 +618,89 @@
     display: inline-block;
 }
 
+.idl-video-wrapper .idl-video{
+    position: relative;
+    height: 520px;
+    width: 720px;
+    background: #F9F9F9;
+}
+
+.idl-video-wrapper .idl-video iframe{
+    position: relative;
+    /*opacity: .2;*/
+}
+
+.idl-video-wrapper .idl-video .loading-wrapper{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin-top: -35px;
+    margin-left: -29px;
+}
+
+.idl-video .loading-wrapper > div{
+    display: inline-block;
+    margin: 0 2px;
+    width: 10px;
+    height: 50px;
+    background: #0290E9;
+
+    -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+    animation: stretchdelay 1.2s infinite ease-in-out;
+}
+
+.idl-video .loading-wrapper .ani-2{
+    -webkit-animation-delay: -1.1s;
+    animation-delay: -1.1s;
+}
+
+.idl-video .loading-wrapper .ani-3{
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+}
+
+.idl-video .loading-wrapper .ani-4{
+    -webkit-animation-delay: -0.9s;
+    animation-delay: -0.9s;
+}
+
+.idl-video .loading-wrapper .ani-5{
+    -webkit-animation-delay: -0.8s;
+    animation-delay: -0.8s;
+}
+
 .idl-video-wrapper .idl-link{
     position: absolute;
     top: 8px;
     right: -20px;
 }
+
+.idl-video-wrapper .impact-link{
+    position: absolute;
+    top: 32px;
+    right: -20px;
+}
+
+.idl-video-wrapper.show-impact .idl-video{
+    display: none;
+}
+
+.idl-video-wrapper .impact{
+    position: relative;
+    height: 520px;
+    width: 720px;
+    background: #F9F9F9;
+}
+
+.idl-video-wrapper.show-impact .impact{
+    display: block;
+}
+
+.idl-video-wrapper .impact{
+    display: none;
+}
+
+
 
 
 
