--- a/layout/mobileStyle.css
+++ b/layout/mobileStyle.css
@@ -18,14 +18,31 @@
     opacity: .4;
 }
 
+.papers-wrapper{
+    padding-bottom: 400px;
+    transition: padding .3s;
+}
+
+.papers-wrapper.read-paper{
+    padding-bottom: 0px;
+}
+
 .content-wrapper{
     padding: 22px 0;
 }
 
-.content-wrapper .paper-item{
-    padding-bottom: 32px;
-    -webkit-transition: height .4s, opacity .3s, padding .4s;
-    transition: height .4s, opacity .3s, padding .4s;
+.paper-item.read-this{
+    height: auto;
+}
+
+.paper-item.read-this .title a{
+    font-size: 36px;
+    transition: font-size .3s .4s, line-height .3s .4s;
+}
+
+.papers-wrapper.will-return .paper-item .title a{
+    font-size: 20px;
+    transition: font-size .3s .1s, line-height .3s .1s;
 }
 
 .paper-item .title a{
@@ -35,46 +52,139 @@
 }
 
 .paper-item .info{
+    font-size: 13px;
+    position: absolute;
     display: none;
+    opacity: 0;
 }
 
-/*read paper*/
-.papers-wrapper.will-read-paper .paper-item .title{
-    opacity: 0;
+.papers-wrapper.will-read-paper .paper-item.read-this .info{
+    display: block;
+}
+
+.papers-wrapper.read-paper .paper-item.read-this .info{
+    opacity: .4;
+}
+
+.papers-wrapper .paper-item{
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    padding-bottom: 32px;
+}
+
+.papers-wrapper .paper-item .title{
+    height: 29px;
+    transition: height .3s;
+}
+
+.papers-wrapper.read-paper .paper-item .title{
     height: 0;
 }
 
-.papers-wrapper.will-read-paper .paper-item{
-    padding: 0;
-}
-
-.papers-wrapper.will-read-paper .paper-item.read-this{
-    padding: 10px 0 20px;
-}
-
-.papers-wrapper.will-read-paper .paper-item.read-this .title{
-    padding: 20px 0 0;
-    line-height: 20px;
+.papers-wrapper.read-paper .paper-item.read-this .title{
     height: auto;
-    opacity: 1;
+}
+
+.papers-wrapper .paper-item{
+    transition: height .3s, opacity .3s, padding .3s;
 }
 
 .papers-wrapper .paper-item .summary-h{
-    -webkit-transition: height .4s, opacity .3s;
-    transition: height .4s, opacity .3s;
+    transition: height .3s, opacity .3s;
 }
 
 .papers-wrapper.will-read-paper .paper-item .summary-h{
     opacity: 0;
-    height: 0;
+}
+
+.papers-wrapper.will-read-paper .paper-item{
+    opacity: 0;
+    padding: 0;
+}
+
+.papers-wrapper.will-read-paper .paper-item.read-this{
+    opacity: 1;
+    padding: 80px 0 140px;
 }
 
 
-.papers-wrapper.read-paper .paper-item,
-.papers-wrapper.read-paper .paper-item.read-this .summary-h{
+
+
+
+.papers-wrapper.will-return .paper-item.read-this{
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 1;
+}
+
+.papers-wrapper.will-return .paper-item{
+    opacity: 0;
+    -webkit-transform: translateY(-10px);
+    transform: translateY(-10px);
+}
+
+
+/*.papers-wrapper .paper-item{*/
+    /*-webkit-transition: opacity .3s, height .4s, padding .4s, -webkit-transform .4s;*/
+    /*transition: opacity .3s, height .4s, padding .4s, transform .4s;*/
+
+/*}*/
+
+/*.papers-wrapper.will-read-paper .paper-item{*/
+    /*opacity: 0;*/
+    /*pointer-events: none;*/
+/*}*/
+
+/*.papers-wrapper.read-paper .paper-item{*/
+    /*height: 0;*/
+    /*padding: 0;*/
+/*}*/
+
+/*.papers-wrapper.will-read-paper .paper-item.read-this{*/
+    /*opacity: 1;*/
+/*}*/
+
+/*.papers-wrapper.will-read-paper .paper-item.read-this{*/
+    /*height: auto;*/
+/*}*/
+
+/*.papers-wrapper.read-paper .paper-item.read-this{*/
+    /*height: auto;*/
+    /*padding: 80px 0 140px;*/
+/*}*/
+
+/*.papers-wrapper.will-read-paper .paper-item.read-this .summary-h{*/
+    /*opacity: 0;*/
+/*}*/
+
+/*.papers-wrapper.read-paper .paper-item.read-this .summary-h{*/
+    /*/!*display: none;*!/*/
+/*}*/
+
+.papers-wrapper .paper-content{
     display: none;
+    opacity: 0;
+    -webkit-transition: opacity .3s, -webkit-transform .3s;
+    -webkit-transform: translateY(-10px);
+    transition: opacity .3s, transform .3s;
+    transform: translateY(-10px);
 }
 
-.papers-wrapper.read-paper .paper-item.read-this{
+.papers-wrapper.will-read-paper .paper-content{
     display: block;
+}
+
+.papers-wrapper.read-paper .paper-content{
+    opacity: 1;
+    -webkit-transition: opacity .3s .3s, -webkit-transform .3s .3s;
+    transition: opacity .3s .3s, transform .3s .3s;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+}
+
+
+.paper .bottom-return{
+    display: inline-block;
+    opacity: .4;
+    margin-top: 24px;
 }
